# kiali-client-python

./: .gitignore  .travis.yml  AUTHORS  CODE_OF_CONDUCT.md  ChangeLog  Pipfile  README.md  README.rst  setup.cfg  setup.py
kiali/: __init__.py  api.py  api_connector.py  client.py  models.py  swagger.py
kiali/model/: apiObject.py  data.py  edge.py  elements.py  graph.py  health.py  metric.py  namespace.py  node.py  rule.py  service.py
kiali/service/: client.py
kiali/tests/: test_kiali.py
tests/: conftest.py  env_basic_auth.yaml  test_api_methods.py  test_api_swagger.py  test_compare_kiali_client_apis.py
