[metadata]
name = kiali-client
author = Guilherme Baufaker Rego
version = 0.8.0
author_email = "gbaufake@redhat.com
summary = Python client to communicate with Kiali server over HTTP(S)
description-file = 
    README.md
    ChangeLog
home-page = https://github.com/kiali/kiali-client-python
license = Apache License 2.0
keywords = kiali, service-mesh, istio, kurbenetes, openshift
classifiers =
      Development Status :: 5 - Production/Stable
      Intended Audience :: Developers
      Programming Language :: Python
      Programming Language :: Python :: 3
      Topic :: System :: Monitoring

[files]
packages = 
    kiali
